REGRESSION (r71566): r71566 breaks bidi-control-chars-treated-as-ZWS.html https://bugs.webkit.org/show_bug.cgi?id=49295

WebCore:

Reviewed by Dave Hyatt.

* platform/graphics/mac/ComplexTextController.h: Added m_indexOffset.
* platform/graphics/mac/ComplexTextControllerATSUI.cpp:
(WebCore::ComplexTextController::ComplexTextRun::overrideLayoutOperation): Use m_indexOffset
instead of computing the offset based on m_directionalOverride.
(WebCore::ComplexTextController::ComplexTextRun::ComplexTextRun): Set m_indexOffset to
the offset between indices in m_characters and indices in the text passed to ATSUI.

LayoutTests:

* platform/mac-leopard/Skipped: Re-enable the previously failing test.



Canonical link: https://commits.webkit.org/62241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71763 268f45cc-cd09-0410-ab3c-d52691b4dbfc