WebCore/platform/graphics/mac/ComplexTextControllerATSUI.cpp
@@ -55,12 +55,11 @@ OSStatus ComplexTextController::ComplexTextRun::overrideLayoutOperation(ATSULayo
 
     count--;
     ItemCount j = 0;
-    CFIndex indexOffset = 0;
+    CFIndex indexOffset = complexTextRun->m_indexOffset;
 
     if (complexTextRun->m_directionalOverride) {
         j++;
         count -= 2;
-        indexOffset = -1;
     }
 
     complexTextRun->m_glyphCount = count;
@@ -146,6 +145,7 @@ ComplexTextController::ComplexTextRun::ComplexTextRun(ATSUTextLayout atsuTextLay
     , m_stringLocation(stringLocation)
     , m_stringLength(stringLength)
     , m_directionalOverride(directionalOverride)
+    , m_indexOffset(0)
     , m_isMonotonic(true)
 {
     OSStatus status;
@@ -203,7 +203,7 @@ ComplexTextController::ComplexTextRun::ComplexTextRun(ATSUTextLayout atsuTextLay
             || leadingCharacter == leftToRightOverride 
             || leadingCharacter == rightToLeftEmbed
             || leadingCharacter == rightToLeftOverride
-            || leadingCharacter == popDirectionalFormatting)
+            || leadingCharacter == popDirectionalFormatting) {
             if (substituteCharacters.isEmpty()) {
                 substituteCharacters.grow(stringLength - 1);
                 memcpy(substituteCharacters.data(), characters + 1, (stringLength - 1) * sizeof(UChar));
@@ -212,6 +212,8 @@ ComplexTextController::ComplexTextRun::ComplexTextRun(ATSUTextLayout atsuTextLay
                 substituteCharacters.remove(0);
                 ATSUTextDeleted(atsuTextLayout, 0, 1);
             }
+            m_indexOffset++;
+        }
     }
 
     if (directionalOverride) {
@@ -227,6 +229,7 @@ ComplexTextController::ComplexTextRun::ComplexTextRun(ATSUTextLayout atsuTextLay
             substituteCharacters.append(popDirectionalFormatting);
         }
         ATSUTextInserted(atsuTextLayout, 0, 2);
+        m_indexOffset--;
     }
 
     ATSULayoutOperationOverrideSpecifier overrideSpecifier;
